# FasterScienceAI

./: .gitignore  README.md  main.py  pyproject.toml  test_all.py
example_vault/: Welcome.md
example_vault/Notes/: Apples are healthy (70%).md  Apples contain fiber (90%).md
example_vault/Sources/: 2024-example-paper.md
