[project]
name = "fasterscienceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf-from-doi",
    "source-digestion-agent",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pdf-from-doi = { workspace = true }
source-digestion-agent = { workspace = true }
