[project]
name = "fasterscienceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "add-source-to-vault",
    "pdf-from-doi",
    "pytest>=8.4.1",
    "source-digestion-agent",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
source-digestion-agent = { workspace = true }
add-source-to-vault = { workspace = true }
pdf-from-doi = { workspace = true }
